src/test/ui/rfc-1445-restrict-constants-in-patterns/match-requires-both-partialeq-and-eq.stderr
error: to use a constant or static of type `Foo` in a pattern, `Foo` must be annotated with `#[derive(PartialEq, Eq)]`
  --> $DIR/match-requires-both-partialeq-and-eq.rs:17:9
   |
LL |         FOO => { }
   |         ^^^

error: aborting due to previous error

